# Project-Tempo

./: .gitignore  README.md  package-lock.json  package.json  proxy.ts
app/: layout.tsx  page.tsx
app/template/[id]/: page.tsx
app/upload/: page.tsx
docs/: Layer3-Design.md  Migration-Plan.md  Population-Authoring-Plan.md  Project-Tempo.md
lib/: parserFetch.ts  templates.ts
parser/: .gitignore  README.md  pyproject.toml
parser/app/: config.py  labels.py  llm.py  main.py  pipeline.py  reconstruct.py  snapshot.py  supabase_client.py
parser/app/datamodel/: derive.py  dimensions_llm.py  identity.py  merge.py  persist.py  schema.py
parser/app/population/: apply.py  match.py  run.py  schema.py
parser/app/raw_extraction/: cell_analyzer.py  column_utils.py  formula_mapper.py  region_detector.py  schema.py  workbook_parser.py
parser/app/structure/: detect.py  field_extractor.py  hierarchy.py  input_detector.py  schema.py  section_signals.py  temporal_analyzer.py
parser/app/understanding/: per_sheet.py  persist.py  prompts.py  run.py  schema.py  sheet_image.py  sheet_view.py  workbook.py
parser/tests/: test_column_utils.py  test_corrections.py  test_formula_graph.py  test_hierarchy.py  test_impact.py  test_input_detector.py  test_labels.py  test_periods.py  test_population.py  test_sheet_view.py  test_snapshot.py  test_strict_schema.py  test_workbook.py
supabase/migrations/: 0001_init.sql  0002_structure.sql  0003_structure_l2.sql  0004_understanding.sql  0005_datamodel.sql  0006_contract.sql
utils/supabase/: middleware.ts  server.ts
(+4 files in other folders)
